<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RandomizerActivity">

    <TextView
            android:text="@string/debugText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/debugText" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/randomizeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/randomizeButton" app:layout_constraintTop_toBottomOf="@+id/debugText"
            android:layout_marginTop="132dp" app:layout_constraintHorizontal_bias="0.498"
            android:onClick="onRandomize"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/randomizedRoleText" app:layout_constraintTop_toBottomOf="@+id/yourText"
            android:layout_marginTop="52dp"/>
    <TextView
            android:text="@string/yourText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/yourText" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/randomizeButton"/>
</android.support.constraint.ConstraintLayout>