<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetupActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill"
            android:labelFor="@id/inputRole1"
            android:layout_marginStart="16dp" android:id="@+id/inputRole1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/roleNameText" tools:text="Town"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="Autofill"
            android:labelFor="@id/inputNum1"
            android:ems="10"
            android:id="@+id/inputNum1"
            android:width="50dp" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/numberOfText"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" tools:text="10"/>
    <TextView
            android:text="@string/role_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/roleNameText"
            android:textSize="24sp" android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/number_of_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberOfText" android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/submit_button" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/inputRole1" app:layout_constraintHorizontal_bias="0.498"
            android:onClick="onSubmit"/>
</android.support.constraint.ConstraintLayout>